refactor(GraphRAGServiceTest): streamline test methods and enhance clarity
- Removed unused `NoteRepository` dependency from `GraphRAGServiceTest` to simplify the test structure.
- Renamed several test methods for improved clarity, reflecting their specific behaviors more accurately.
- Consolidated assertions in tests to enhance readability and maintainability, ensuring that focus note details and related notes are validated effectively across different budget scenarios.

These changes improve the overall clarity and organization of the test suite, making it easier to understand and manage.